<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nowplaying"
            android:icon="@drawable/ic_nowplaying"
            android:title="@string/title_nowplaying" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_upcoming"
            android:title="@string/title_upcoming" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/title_search" />
    </group>

    <item android:title="@string/nav_preferences">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
