<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    card_view:cardCornerRadius="4dp"
    tools:context=".activity.UpcomingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imagePoster"
            android:layout_width="185dp"
            android:layout_height="278dp"

            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/imagePoster"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/tools_title" />

        <TextView
            android:id="@+id/textOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitle"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/imagePoster"
            tools:text="@string/tools_overview_stripped" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textOverview"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/imagePoster"
            tools:text="@string/tools_date_released" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/imagePoster"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDetail"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonShare"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>